# mega-app-updater

./: .gitignore  CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
.cursor/plans/: limpiador_en_mega_app_932a1328.plan.md
.github/workflows/: ci.yml  release.yml
docs/: CODIFICACION_CONTRACT.md  DEV_GUIDE.md  LIMPIADOR_QC_CONTRACT.md  conexion-de-proyectos.md  cuestionario-prueba-sin-errores.txt  cuestionario-prueba-tipos-mixtos.txt  cuestionario-validator-plan.md  limpiador-5c-y-rediseno-review.md  limpiador-plan.md
docs/migrations/: 2026-05-cuestionario-init.sql  2026-05-paso4-flags-enriched.sql  2026-05-paso5a-row-edits.sql  2026-05-paso5c-qp-sync.sql
python-scripts/: hello.py  requirements.txt  run_brand_audit.py
python-scripts/_shared/: __init__.py
python-scripts/brand_audit/: config.py  config_loader.py  create_slides.py  generador_ia.py  main.py  process_data.py  tabulation_engine.py  utils.py  visual_engine.py
scripts/: bundle-python.ps1
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  python_bridge.rs
src-tauri/src/commands/: brand_audit.rs  mod.rs  python.rs  questionpro.rs
src/components/: NotificationBell.tsx  SurveyPicker.tsx  TitleBar.tsx  ToolErrorBoundary.tsx  Toolbar.tsx  UpdateDialog.tsx
src/lib/: activity-context.tsx  activity-preview.ts  activity.ts  mega-paths.ts  questionpro.ts  settings.ts  taskbar-badge.ts  tauri.ts  tool-navigation.ts  updater.ts
src/lib/cleaning/: types.ts  (+19 more)
(+60 files in other folders)
