[package]
name = "mega-tools"
version = "1.0.1"
description = "Mega App — herramientas internas con auto-update"
authors = ["Mega Research"]
edition = "2021"

[lib]
name = "mega_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
